bdr.BDR.scala.error
Compilation error:
BDR:1: error: Missing closing brace `}' assumed here
while (isOverMessage()){
^BDR:1: error: Missing closing brace `}' assumed here
while (isOverMessage()){
^BDR:1: error: expected class or object definition
while (isOverMessage()){
^BDR:12: error: Missing closing brace `}' assumed here
  )else if(readMessage():"A"){
  ^BDR:14: error: Missing closing brace `}' assumed here
  )else if(readMessage():"B"){
  ^BDR:17: error: Missing closing brace `}' assumed here
  )else if(readMessage():"C"){
  ^BDR:21: error: Missing closing brace `}' assumed here
  )else if(readMessage():"Z"){
  ^BDR:23: error: Missing closing brace `}' assumed here
  )else if(readMessage():"Y"){
  ^BDR:26: error: Missing closing brace `}' assumed here
  )else if(readMessage():"X"){
  ^